build: :package: 修复tsup打包问题

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development tsup --watch",
-    "build": "NODE_ENV=build tsup",
-    "build:dev": "NODE_ENV=development tsup",
+    "dev": "tsup --watch",
+    "build": "tsup",
+    "build:prod": "cross-env NODE_ENV=production tsup",
     "commit": "git-cz",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
@@ -34,6 +34,7 @@
     "@arco-design/web-vue": "^2.57.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "cross-env": "^10.0.0",
     "cz-git": "^1.12.0",
     "eslint": "^9.34.0",
     "husky": "^9.1.7",
