--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
   },
   "dependencies": {
     "@types/node": "^24.3.0",
+    "crypto-js": "^4.2.0",
     "tsup": "^8.5.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
+    "@types/crypto-js": "^4.2.2",
     "cross-env": "^10.0.0",
     "cz-git": "^1.12.0",
     "eslint": "^9.34.0",
